# mammut

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO  contact.html  cover.css  index.html  index_old.html  indexok.html  install.html  mammut.files  mammut.includes  manual.html
demo/energy/: CMakeLists.txt  Makefile  activationPower.cpp  cap.cpp  demo-energy-extended.cpp  joules.cpp  joules.py  joulesCpu.cpp  launcher.cpp  voltageTable.cpp
demo/topology/: CMakeLists.txt  Makefile  clockModulation.cpp  demo-topology.cpp  idleLevels.cpp  idleLevelsPower.cpp  offlining.cpp
src/: CMakeLists.txt  communicator-tcp.cpp  communicator.cpp  mammut-server.cpp  mammut.cpp  mammut_pybind.cpp  utils.cpp
src/cpufreq/: cpufreq-linux.cpp  cpufreq.cpp
src/energy/: energy-linux.cpp  energy-remote.cpp  energy-remote.proto  energy.cpp
src/task/: Makefile  task-linux.cpp  task.cpp
src/topology/: topology-linux.cpp  topology-remote.proto  topology.cpp
test/: CMakeLists.txt  Makefile  runtests.sh  test.sh  testCpufreq.cpp  testTasks.cpp  testTopology.cpp  testUtils.cpp
test/archs/: README.md
test/archs/repara/proc/: cpuinfo  stat
test/archs/repara/sys/devices/system/cpu/: modalias
test/archs/repara/sys/devices/system/cpu/cpu0/cache/index0/: level  number_of_sets  size  type
test/archs/repara/sys/devices/system/cpu/cpu0/cache/index1/: coherency_line_size  level  number_of_sets  size  type  ways_of_associativity
test/archs/repara/sys/devices/system/cpu/cpu0/cache/index2/: level  number_of_sets  physical_line_partition  shared_cpu_list  shared_cpu_map  size
test/archs/repara/sys/devices/system/cpu/cpu0/cache/index3/: coherency_line_size  level  number_of_sets  physical_line_partition  shared_cpu_list  shared_cpu_map  size  type  ways_of_associativity
test/archs/repara/sys/devices/system/cpu/cpu0/cpufreq/: affected_cpus  bios_limit  cpuinfo_min_freq  cpuinfo_transition_latency  related_cpus  scaling_available_frequencies  scaling_available_governors  scaling_cur_freq  scaling_driver
test/archs/repara/sys/devices/system/cpu/cpu0/cpuidle/state0/: desc  latency  name  power  time  usage
test/archs/repara/sys/devices/system/cpu/cpu0/cpuidle/state1/: desc  latency  name  power  time  usage
test/archs/repara/sys/devices/system/cpu/cpu0/cpuidle/state2/: desc  latency  name  power  time  usage
test/archs/repara/sys/devices/system/cpu/cpu0/cpuidle/state3/: desc  latency  name  power  time  usage
test/archs/repara/sys/devices/system/cpu/cpu0/cpuidle/state4/: desc  latency  name  power  time  usage
test/archs/repara/sys/devices/system/cpu/cpu1/cpuidle/state0/: time
test/archs/repara/sys/devices/system/cpu/cpu1/cpuidle/state1/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu1/cpuidle/state2/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu1/cpuidle/state3/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu1/cpuidle/state4/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu10/cpufreq/: scaling_cur_freq
test/archs/repara/sys/devices/system/cpu/cpu10/cpuidle/state0/: time
test/archs/repara/sys/devices/system/cpu/cpu10/cpuidle/state1/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu10/cpuidle/state2/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu10/cpuidle/state3/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu10/cpuidle/state4/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu11/cpuidle/state0/: time
test/archs/repara/sys/devices/system/cpu/cpu11/cpuidle/state1/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu11/cpuidle/state2/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu11/cpuidle/state3/: time
test/archs/repara/sys/devices/system/cpu/cpu11/cpuidle/state4/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu12/cpuidle/state0/: time
test/archs/repara/sys/devices/system/cpu/cpu12/cpuidle/state1/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu12/cpuidle/state2/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu12/cpuidle/state3/: time
test/archs/repara/sys/devices/system/cpu/cpu12/cpuidle/state4/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu13/cpuidle/state0/: time
test/archs/repara/sys/devices/system/cpu/cpu13/cpuidle/state1/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu13/cpuidle/state2/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu13/cpuidle/state3/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu13/cpuidle/state4/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu14/cpuidle/state0/: time
test/archs/repara/sys/devices/system/cpu/cpu14/cpuidle/state1/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu14/cpuidle/state2/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu14/cpuidle/state3/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu14/cpuidle/state4/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu15/cpuidle/state0/: time
test/archs/repara/sys/devices/system/cpu/cpu15/cpuidle/state1/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu15/cpuidle/state2/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu15/cpuidle/state3/: time
test/archs/repara/sys/devices/system/cpu/cpu15/cpuidle/state4/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu16/cpuidle/state0/: time
test/archs/repara/sys/devices/system/cpu/cpu16/cpuidle/state1/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu16/cpuidle/state2/: time  usage
test/archs/repara/sys/devices/system/cpu/cpu22/cpufreq/: freqdomain_cpus
test/archs/repara/sys/devices/system/cpu/cpu23/: uevent
test/archs/repara/sys/devices/system/cpu/cpu24/cpufreq/: freqdomain_cpus
test/archs/repara/sys/devices/system/cpu/cpu39/cpufreq/: scaling_available_governors
test/archs/repara/sys/devices/system/cpu/cpu43/cpufreq/: scaling_setspeed
test/archs/repara/sys/devices/system/cpu/cpu5/cpufreq/: scaling_available_frequencies
test/archs/repara/sys/devices/system/cpu/cpu9/topology/: core_siblings
test/gcov/: gcov.sh
(+795 files in other folders)
